cluster-resources/services/minecraft-java-geyser/service-map.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mc-java-geyser-service-map
spec:
  selector:
    app: mc-java-geyser
  ports:
    - name: minecraft-webmap
      protocol: TCP
      port: 8080
      targetPort: 8080
