cluster-resources/services/minecraft-java-geyser/ingress-map.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mc-java-geyser-ingress-map
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts: [geyser.antoncluster.ovh]
      secretName: letsencrypt-prod-mc-java-geyser-map-tls-secret
  rules:
    - host: geyser.antoncluster.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mc-java-geyser-service-map
                port:
                  number: 8080
